--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   
@@ -54,11 +56,18 @@
       font-size: 18px;
       text-align: left;
       padding: 0px 25px 0px;
+      font-family: 'Outfit', sans-serif;
     }
+
+   
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap');
+
+
 
     .main-paragraph
     {
       text-align: left;
+      font-family: 'Outfit', sans-serif;
       padding: 0px 25px 0px;
       color: hsl(215, 51%, 70%);
 
@@ -67,6 +76,7 @@
     .ETH {
       color: hsl(178, 100%, 50%);
       padding-left: 8px;
+      font-size: 12px;
     }
 
 
@@ -85,7 +95,7 @@
 
     .time-left
     {
-      padding-top: 5px;
+      padding-top: 11px;
       padding-left: 8px;
     }
 
@@ -116,7 +126,7 @@
     .creation {
       color: hsl(215, 51%, 70%);
       margin: 9px -15px 5px;
-align-content: flex-start;
+      align-content: flex-start;
    
     }
 span {
